Fix alignment on mobile.

--- a/src/style.css
+++ b/src/style.css
@@ -36,11 +36,13 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 64px;
     letter-spacing: 9px;
+    text-align: center;
 }
 
 p {
     margin: 0 0 20px;
     font-size: 28px;
+    text-align: center;
 }
 
 video, .bg, .cont {
